[gd_scene load_steps=28 format=3 uid="uid://cdir57c37efd3"]

[ext_resource type="PackedScene" uid="uid://bjehm3m2b70ga" path="res://scenes/util_health_bar.tscn" id="1_4sahq"]
[ext_resource type="Script" path="res://scripts/char_enemy.gd" id="1_5hfb1"]
[ext_resource type="PackedScene" uid="uid://diul5k6kakr41" path="res://scenes/util_player_detection.tscn" id="2_isacw"]
[ext_resource type="PackedScene" uid="uid://bflp6h2ayrosv" path="res://scenes/util_sound_effects.tscn" id="5_k3yis"]
[ext_resource type="Texture2D" uid="uid://cbkfcoeh2wqxt" path="res://assets/sprites/spore.png" id="5_rd0ly"]
[ext_resource type="AudioStream" uid="uid://6x2x7426b6r1" path="res://assets/sounds/zombie_3.wav" id="6_xadtr"]
[ext_resource type="AudioStream" uid="uid://cxkb2wxi82s7n" path="res://assets/sounds/zombie_1.wav" id="7_wcudy"]
[ext_resource type="AudioStream" uid="uid://c3x7f4n2wier0" path="res://assets/sounds/zombie_2.wav" id="8_exkkp"]
[ext_resource type="AudioStream" uid="uid://dmc73gq44hjjh" path="res://assets/sounds/zombie_death.wav" id="9_e758o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebch3"]
size = Vector2(12, 14)

[sub_resource type="Animation" id="Animation_yw2h4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageZone:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageZone:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionDetectorRight:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionDetectorRight:exclude_parent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionDetectorLeft:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionDetectorLeft:exclude_parent")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionDetectorDown:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CollisionDetectorDown:exclude_parent")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:monitoring")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".:monitorable")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("HealthBar:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0m7ka"]
resource_name = "death"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.43333, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"queue_free"],
"method": &"call_deferred"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageZone:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DamageZone:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"set_direction"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionDetectorRight:enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionDetectorRight:exclude_parent")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CollisionDetectorLeft:enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CollisionDetectorLeft:exclude_parent")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CollisionDetectorDown:enabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CollisionDetectorDown:exclude_parent")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:monitoring")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:monitorable")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "method"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/15/type = "method"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("HealthBar")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("HealthBar:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nnjpj"]
_data = {
"RESET": SubResource("Animation_yw2h4"),
"death": SubResource("Animation_0m7ka")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_3tanq"]
atlas = ExtResource("5_rd0ly")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_885wk"]
atlas = ExtResource("5_rd0ly")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kur3d"]
atlas = ExtResource("5_rd0ly")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb046"]
atlas = ExtResource("5_rd0ly")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdj0t"]
atlas = ExtResource("5_rd0ly")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijg8q"]
atlas = ExtResource("5_rd0ly")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxvan"]
atlas = ExtResource("5_rd0ly")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jjfv"]
atlas = ExtResource("5_rd0ly")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m6yf"]
atlas = ExtResource("5_rd0ly")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogfv3"]
atlas = ExtResource("5_rd0ly")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl4x6"]
atlas = ExtResource("5_rd0ly")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2tk7"]
atlas = ExtResource("5_rd0ly")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uglf0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tanq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_885wk")
}],
"loop": true,
"name": &"attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kur3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb046")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdj0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijg8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxvan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jjfv")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jjfv")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jjfv")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m6yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogfv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl4x6")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2tk7")
}],
"loop": false,
"name": &"hurt",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3cf7"]
size = Vector2(16, 14)

[node name="Enemy" type="Area2D"]
collision_layer = 4
script = ExtResource("1_5hfb1")

[node name="PlayerDetection" parent="." instance=ExtResource("2_isacw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ebch3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nnjpj")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uglf0")
animation = &"hurt"
autoplay = "default"
frame_progress = 1.0

[node name="DamageZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DamageTimer" type="Timer" parent="DamageZone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j3cf7")

[node name="Sounds" type="Node2D" parent="."]

[node name="Growl-1" parent="Sounds" instance=ExtResource("5_k3yis")]
stream = ExtResource("6_xadtr")

[node name="Growl-2" parent="Sounds" instance=ExtResource("5_k3yis")]
stream = ExtResource("7_wcudy")

[node name="Growl-3" parent="Sounds" instance=ExtResource("5_k3yis")]
stream = ExtResource("8_exkkp")

[node name="Death" parent="Sounds" instance=ExtResource("5_k3yis")]
stream = ExtResource("9_e758o")

[node name="Timers" type="Node2D" parent="."]

[node name="DamagePlayerTimer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="GetDirectionTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="HealthBar" parent="." instance=ExtResource("1_4sahq")]
offset_left = -9.0
offset_top = -13.0
offset_right = 37.0
offset_bottom = -6.0
value = 0.0

[node name="CollisionDetectorRight" type="RayCast2D" parent="."]
position = Vector2(9.53674e-07, 4)
skew = -1.36834
target_position = Vector2(7, 0)

[node name="CollisionDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(0, 4)
skew = -1.23046
target_position = Vector2(-7, 0)

[node name="CollisionDetectorDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)

[node name="CollisionDetectorInside" type="RayCast2D" parent="."]
target_position = Vector2(0, 7)

[node name="DamageTextPosition" type="Node2D" parent="."]
position = Vector2(0, -8)

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="DamageZone" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DamageZone" to="." method="_on_body_exited"]
[connection signal="timeout" from="DamageZone/DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Timers/DamagePlayerTimer" to="." method="_on_damage_player_timer_timeout"]
[connection signal="timeout" from="Timers/GetDirectionTimer" to="." method="_on_get_direction_timer_timeout"]
